--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,12 +20,12 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHello_World">
     <property name="title">
-     <string>Hello World</string>
+     <string>Test Branch 2</string>
     </property>
    </widget>
    <addaction name="menuHello_World"/>
