--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,7 +25,7 @@
    </property>
    <widget class="QMenu" name="menuHello_World">
     <property name="title">
-     <string>Test Branch 2</string>
+     <string>My Message</string>
     </property>
    </widget>
    <addaction name="menuHello_World"/>
