--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -173,6 +173,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="queued_IMG">
+    <property name="geometry">
+     <rect>
+      <x>325</x>
+      <y>370</y>
+      <width>250</width>
+      <height>146</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
