--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>600</height>
+    <width>621</width>
+    <height>587</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -163,10 +163,10 @@
    <widget class="QLabel" name="MP3_IMG">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>255</x>
       <y>20</y>
-      <width>256</width>
-      <height>261</height>
+      <width>341</width>
+      <height>281</height>
      </rect>
     </property>
     <property name="text">
@@ -176,10 +176,23 @@
    <widget class="QLabel" name="queued_IMG">
     <property name="geometry">
      <rect>
-      <x>325</x>
-      <y>370</y>
-      <width>250</width>
-      <height>146</height>
+      <x>254</x>
+      <y>345</y>
+      <width>351</width>
+      <height>171</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="actionVibe2">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>140</y>
+      <width>31</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -192,8 +205,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>679</width>
-     <height>26</height>
+     <width>621</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHello_World">
