--- a/resources.qrc
+++ b/resources.qrc
@@ -2,6 +2,6 @@
     <qresource prefix="/images">
         <file>MP3.png</file>
         <file>Queued.png</file>
-        <file>MainScreen.png</file>
+        <file>MainScreen.jpg</file>
     </qresource>
 </RCC>
