Working Vibes menu

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>MainScreen.jpg</file>
         <file>MiniplayerScreen.jpg</file>
         <file>MainScreenEdit.jpg</file>
+        <file>MainScreenVibes.jpg</file>
     </qresource>
 </RCC>
