--- a/resources.qrc
+++ b/resources.qrc
@@ -4,6 +4,6 @@
         <file>MiniplayerScreen.jpg</file>
         <file>MainScreenEdit.jpg</file>
         <file>MainScreenVibes.jpg</file>
-        <file>HelpWindow.jpg</file>
+        <file>MainScreenHelp.jpg</file>
     </qresource>
 </RCC>
