--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
-    <height>728</height>
+    <width>739</width>
+    <height>758</height>
    </rect>
   </property>
   <property name="palette">
@@ -459,289 +459,506 @@
    <property name="autoFillBackground">
     <bool>false</bool>
    </property>
-   <widget class="QPushButton" name="actionClear">
+   <widget class="QGraphicsView" name="Player">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>2</y>
-      <width>51</width>
-      <height>32</height>
+      <x>310</x>
+      <y>-4</y>
+      <width>432</width>
+      <height>470</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
+    <property name="sizeIncrement">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="baseSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Miniplayer.png);</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionVibe">
+   <widget class="QGraphicsView" name="P_Cassette">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>2</y>
-      <width>51</width>
-      <height>32</height>
+      <x>310</x>
+      <y>-4</y>
+      <width>432</width>
+      <height>470</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette.png);</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionHelp">
+   <widget class="QGraphicsView" name="P_C_Tape">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>145</x>
-      <y>2</y>
-      <width>51</width>
-      <height>32</height>
+      <x>310</x>
+      <y>-4</y>
+      <width>432</width>
+      <height>470</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette Tape.png);</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionEdit">
+   <widget class="QGraphicsView" name="P_C_Tape_Color">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>2</y>
-      <width>51</width>
-      <height>32</height>
+      <x>400</x>
+      <y>55</y>
+      <width>256</width>
+      <height>118</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>170</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>170</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled/>
+     </palette>
     </property>
    </widget>
-   <widget class="QLabel" name="MP3_IMG">
+   <widget class="QGraphicsView" name="Background">
     <property name="geometry">
      <rect>
-      <x>255</x>
-      <y>20</y>
-      <width>341</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="queued_IMG">
-    <property name="geometry">
-     <rect>
-      <x>254</x>
-      <y>345</y>
-      <width>351</width>
-      <height>171</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="MainScreen_IMG">
-    <property name="geometry">
-     <rect>
-      <x>-54</x>
-      <y>-30</y>
+      <x>-16</x>
+      <y>-7</y>
       <width>768</width>
-      <height>767</height>
+      <height>768</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/images/Home Background.png);</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="P_C_Vibes">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>-4</y>
+      <width>432</width>
+      <height>470</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette Vibes.png);</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="Cassette">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>430</y>
+      <width>432</width>
+      <height>470</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette.png);</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="C_Vibes">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>430</y>
+      <width>432</width>
+      <height>470</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette Vibes.png);</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="C_Tape_Color">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>490</y>
+      <width>256</width>
+      <height>118</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>170</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>170</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled/>
+     </palette>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="C_Tape">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>430</y>
+      <width>432</width>
+      <height>470</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Cassette Tape.png);</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="Songlist">
+    <property name="geometry">
+     <rect>
+      <x>53</x>
+      <y>75</y>
+      <width>244</width>
+      <height>671</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(77, 45, 83);</string>
+    </property>
+    <property name="currentRow">
+     <number>-1</number>
+    </property>
+    <property name="sortingEnabled">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="P_C_Song">
+    <property name="geometry">
+     <rect>
+      <x>368</x>
+      <y>176</y>
+      <width>53</width>
+      <height>34</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Song.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionStop">
+   <widget class="QPushButton" name="C_Song">
     <property name="geometry">
      <rect>
-      <x>345</x>
-      <y>290</y>
-      <width>51</width>
-      <height>101</height>
+      <x>368</x>
+      <y>610</y>
+      <width>53</width>
+      <height>34</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Song.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionBack">
+   <widget class="QPushButton" name="B_Shuffle">
     <property name="geometry">
      <rect>
-      <x>395</x>
-      <y>290</y>
-      <width>41</width>
-      <height>101</height>
+      <x>381</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 1.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionStart">
+   <widget class="QPushButton" name="B_Back">
     <property name="geometry">
      <rect>
-      <x>435</x>
-      <y>290</y>
-      <width>51</width>
-      <height>101</height>
+      <x>429</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 2.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionPause">
+   <widget class="QPushButton" name="B_Play">
     <property name="geometry">
      <rect>
-      <x>485</x>
-      <y>290</y>
-      <width>51</width>
-      <height>101</height>
+      <x>477</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 3.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionNext">
+   <widget class="QPushButton" name="B_Pause">
     <property name="geometry">
      <rect>
-      <x>535</x>
-      <y>290</y>
-      <width>51</width>
-      <height>101</height>
+      <x>525</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 4.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="actionEject">
+   <widget class="QPushButton" name="B_Forwaard">
     <property name="geometry">
      <rect>
-      <x>585</x>
-      <y>290</y>
-      <width>51</width>
-      <height>101</height>
+      <x>573</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 5.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QFrame" name="frame">
+   <widget class="QPushButton" name="B_Restart">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>621</x>
+      <y>315</y>
+      <width>50</width>
+      <height>96</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Player Button 6.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="M_Clear">
+    <property name="geometry">
+     <rect>
+      <x>53</x>
       <y>35</y>
-      <width>232</width>
-      <height>442</height>
+      <width>50</width>
+      <height>31</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_4">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_5">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_6">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_7">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_8">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_9">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-    </layout>
-    <zorder>pushButton_2</zorder>
-    <zorder>pushButton_5</zorder>
-    <zorder>pushButton_6</zorder>
-    <zorder>pushButton</zorder>
-    <zorder>pushButton_3</zorder>
-    <zorder>pushButton_4</zorder>
-    <zorder>pushButton_7</zorder>
-    <zorder>pushButton_8</zorder>
-    <zorder>pushButton_9</zorder>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Clear.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
-   <widget class="QPushButton" name="actionMiniplayer">
+   <widget class="QPushButton" name="M_Songs">
     <property name="geometry">
      <rect>
-      <x>623</x>
-      <y>56</y>
-      <width>29</width>
+      <x>102</x>
+      <y>35</y>
+      <width>50</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Songs.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="M_Search">
+    <property name="geometry">
+     <rect>
+      <x>151</x>
+      <y>35</y>
+      <width>50</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Search.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="M_Edit">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>35</y>
+      <width>50</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Edit.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="M_Help">
+    <property name="geometry">
+     <rect>
+      <x>249</x>
+      <y>35</y>
+      <width>50</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Button Help.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="MenuBackground">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>72</y>
+      <width>250</width>
+      <height>678</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Menu Background.png);</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="P_Minimize">
+    <property name="geometry">
+     <rect>
+      <x>655</x>
+      <y>80</y>
+      <width>34</width>
       <height>29</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/Miniplayer -.png);</string>
+    </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <zorder>MP3_IMG</zorder>
-   <zorder>queued_IMG</zorder>
-   <zorder>MainScreen_IMG</zorder>
-   <zorder>actionEdit</zorder>
-   <zorder>actionClear</zorder>
-   <zorder>actionHelp</zorder>
-   <zorder>actionVibe</zorder>
-   <zorder>actionStop</zorder>
-   <zorder>actionBack</zorder>
-   <zorder>actionStart</zorder>
-   <zorder>actionPause</zorder>
-   <zorder>actionNext</zorder>
-   <zorder>actionEject</zorder>
-   <zorder>frame</zorder>
-   <zorder>actionMiniplayer</zorder>
+   <zorder>Background</zorder>
+   <zorder>C_Tape_Color</zorder>
+   <zorder>Player</zorder>
+   <zorder>P_C_Tape_Color</zorder>
+   <zorder>P_Cassette</zorder>
+   <zorder>P_C_Vibes</zorder>
+   <zorder>Cassette</zorder>
+   <zorder>C_Vibes</zorder>
+   <zorder>C_Tape</zorder>
+   <zorder>Songlist</zorder>
+   <zorder>P_C_Tape</zorder>
+   <zorder>B_Shuffle</zorder>
+   <zorder>B_Back</zorder>
+   <zorder>B_Play</zorder>
+   <zorder>B_Pause</zorder>
+   <zorder>B_Forwaard</zorder>
+   <zorder>B_Restart</zorder>
+   <zorder>M_Clear</zorder>
+   <zorder>P_C_Song</zorder>
+   <zorder>C_Song</zorder>
+   <zorder>M_Songs</zorder>
+   <zorder>M_Search</zorder>
+   <zorder>M_Edit</zorder>
+   <zorder>M_Help</zorder>
+   <zorder>MenuBackground</zorder>
+   <zorder>P_Minimize</zorder>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
